Revert lab to initial content for record section